--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "2.6.1",
     "express": "4.16.4",
-    "mysql": "^2.16.0",
+    "express-session": "1.16.1",
+    "method-override": "^3.0.0",
+    "mysql": "2.16.0",
     "path": "0.12.7"
   }
 }
